--- a/java并发编程/对象的共享.md
+++ b/java并发编程/对象的共享.md
@@ -5,7 +5,7 @@
 * 当线程在没有同步的情况下读取变量时，可能会得到一个失效值，但至少这个值时由之前某个线程设置的值，而不是一个随机值，这种安全性保证也被称作最低安全性。64位变量可能除外。
 * 加锁可以保证可见性（happen-before）。
 * Volatile可以保证变量的可见性，且因为禁止重排序，读取volatile变量时总会返回最新写入的值。
-* volatile变量可以确保自身的可见性，**并且保证它们所引用对象的状态的可见性, 即保证valatile对象的域的可见性**。
+* volatile变量可以确保自身的可见性，**引用只保证引用的可见性，数组不保证数组元素的可见性**。
 * **变量可见不代表变量的域也可见。**
 * volatile变量因为不确保原子性，所以只当满足下列条件时才可以用来作为同步：
   * 对变量的写不依赖于当前值，或者只有一个线程写
@@ -69,6 +69,7 @@ public class SafeListener {
 
   ```
   * ThreadLocal类相当于与线程绑定的局部变量。
+  * AQS读写锁中，用ThreadLocal维护每个线程持有的读锁数量，用来解决读锁的可重入问题
 
 ## 不变性
 * 如果某个对象在被创建后其状态就不能被修改，那么这个对象就称为不可变对象。
